--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_svg: ^2.0.10
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -58,8 +58,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/logo_yp.svg
+    - assets/images/mail.svg
+    - assets/images/lock.svg
+    - assets/images/eye_off.svg
+    - assets/images/eye_on.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -73,17 +77,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  fonts:
+    - family: Kantumruy Pro
+      fonts:
+        - asset: assets/fonts/KantumruyPro-Bold.ttf
+        - asset: assets/fonts/KantumruyPro-BoldItalic.ttf
+        - asset: assets/fonts/KantumruyPro-ExtraLight.ttf
+        - asset: assets/fonts/KantumruyPro-ExtraLightItalic.ttf
+        - asset: assets/fonts/KantumruyPro-Italic.ttf
+        - asset: assets/fonts/KantumruyPro-Light.ttf
+        - asset: assets/fonts/KantumruyPro-LightItalic.ttf
+        - asset: assets/fonts/KantumruyPro-Medium.ttf
+        - asset: assets/fonts/KantumruyPro-MediumItalic.ttf
+        - asset: assets/fonts/KantumruyPro-Regular.ttf
+        - asset: assets/fonts/KantumruyPro-SemiBold.ttf
+        - asset: assets/fonts/KantumruyPro-SemiBoldItalic.ttf
+        - asset: assets/fonts/KantumruyPro-Thin.ttf
+        - asset: assets/fonts/KantumruyPro-ThinItalic.ttf
