--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,11 +59,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
     - assets/images/logo_yp.svg
     - assets/images/mail.svg
     - assets/images/lock.svg
     - assets/images/eye_off.svg
     - assets/images/eye_on.svg
+    - assets/images/user.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
