--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.10
   intl: ^0.19.0
+  provider: ^6.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -77,6 +78,9 @@ flutter:
     - assets/images/arrow_left.svg
     - assets/images/arrow_right.svg
     - assets/images/edit_icon.svg
+    - assets/images/log_out.svg
+    - assets/images/notifications.svg
+    - assets/images/help.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
