--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_analytics: ^12.0.4
   firebase_crashlytics: ^5.0.4
   firebase_auth: ^6.1.2
+  shared_preferences: ^2.2.2
+
 
 dev_dependencies:
   flutter_test:
