Connecting databases Firebase and Supabase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_crashlytics: ^5.0.4
   firebase_auth: ^6.1.2
   shared_preferences: ^2.2.2
+  cloud_firestore: ^6.1.0
+  supabase_flutter: ^2.10.3
+  image_picker: ^1.2.1
 
 
 dev_dependencies:
