--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^6.1.0
   supabase_flutter: ^2.10.3
   image_picker: ^1.2.1
+  uuid: ^4.5.2
 
 
 dev_dependencies:
