--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,19 +45,16 @@ dependencies:
   supabase_flutter: ^2.10.3
   image_picker: ^1.2.1
   uuid: ^4.5.2
+  envied: ^0.5.4
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_launcher_icons: "^0.13.1"
+  build_runner: ^2.4.8
+  envied_generator: ^0.5.4
 
 
 
